@@ -12,6 +12,14 @@ WORKING_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}"  )" && pwd  )"
 ####################
 ### READ ARGUMENTS
 ####################
+#How to not Prompt when Installing a Module using cpan
+#export PERL_MM_USE_DEFAULT=1
+#export PERL_EXTUTILS_AUTOINSTALL="--defaultdeps"
+
+#WORKING_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}"  )" && pwd  )"
+
+source ${HOME}/step-0-color.sh
+
 TOOLS_OPTION_PURIFY=""
 export PERLGEN_OPTION=""
 typeset PURIFY=$1
@@ -34,35 +42,35 @@ then
 fi
 ###################
 
-echo "ARCH : ${ARCH} must be sun4sol sun4 rs6000 hprisc solaris linux cygwin winnt"
+#echo -e "${cyan} ARCH : ${ARCH} must be sun4sol sun4 rs6000 hprisc solaris linux cygwin winnt ${NC}"
 
 if [ -z "$PROJECT_USER" ]
 then
-  echo "ERROR: Set PROJECT_USER environment variable!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : PROJECT_USER, use the default one ${NC}"
   export PROJECT_USER=albandri
 fi
 
 if [ -z "$PROJECT_VERSION" ]
 then
-  echo "ERROR: Set PROJECT_VERSION environment variable!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : PROJECT_VERSION, use the default one ${NC}"
   export PROJECT_VERSION=30
 fi
 
 if [ -z "$DRIVE_PATH" ]
 then
-  #echo "ERROR: Set DRIVE_PATH environment variable!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : DRIVE_PATH, use the default one ${NC}"
   export DRIVE_PATH=
 fi
 
 if [ -z "$PROJECT_HOME" ]
 then
-  echo "ERROR: Set PROJECT_HOME environment variable!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : PROJECT_HOME, use the default one ${NC}"
   export PROJECT_HOME=${DRIVE_PATH}/workspace/users
 fi
 
 if [ -z "$WORKSPACE_ENV" ]
 then
-  echo "ERROR: Set WORKSPACE_ENV environment variable!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : WORKSPACE_ENV, use the default one ${NC}"
   export WORKSPACE_ENV=${PROJECT_HOME}/${PROJECT_USER}${PROJECT_VERSION}/nabla/env
 fi
 
@@ -95,11 +103,11 @@ fi
 if [ -d "${HOME}/.linuxbrew/bin" ] ; then
     PATH="${HOME}/.linuxbrew/bin:$PATH"
 fi
-if [ -d "/home/linuxbrew/.linuxbrew/bin/" ] ; then
-    PATH="/home/linuxbrew/.linuxbrew/bin/:$PATH"
-fi
 if [ -d "${HOME}/.git-radar" ] ; then
     PATH="${HOME}/.git-radar/:$PATH"
+fi
+if [ -d "/home/linuxbrew/.linuxbrew/bin/" ] ; then
+    PATH="/home/linuxbrew/.linuxbrew/bin/:$PATH"
 fi
 if [ -d "/snap/bin" ] ; then
     PATH="/snap/bin/:$PATH"
@@ -111,7 +119,7 @@ export PROJECT_BUILD_TYPE=target
 export CLIENT_SERVER_TYPE=jboss
 
 export PROJECT_DEV=${PROJECT_HOME}/${PROJECT_USER}${PROJECT_MAJOR_VERSION}
-echo PROJECT_USER: ${PROJECT_USER} PROJECT_DEV : ${PROJECT_DEV}
+echo -e "${cyan} PROJECT_USER : ${PROJECT_USER} PROJECT_DEV : ${PROJECT_DEV} ${NC}"
 export PROJECT_SRC=${PROJECT_DEV}/${PROJECT_EXTRACTION}
 export PROJECT_TARGET_PATH=${WORKSPACE}/${PROJECT_BUILD_TYPE}
 export PROJECT_USER_PROFILE="${PROJECT_DEV}/env/config/profiles/${PROJECT_USER}${PROJECT_VERSION}.${ARCH}.properties"
@@ -123,13 +131,14 @@ export PROJECT_PKG=${PROJECT_TARGET_PATH}/pkg/${PROJECT_MAJOR_VERSION}
 if [ ! -d $PROJECT_DEV ]
 then
   echo "ERROR: Directory ${PROJECT_DEV} doesn't exist!"
+  echo -e "${red} ${double_arrow} Directory ${PROJECT_DEV} doesn't exist! ${head_skull} ${NC}"
   exit 1
 fi
 
 #This variable must not be set if jenkins is used
 if [ -z "$WORKSPACE" ]
 then
-  echo "ERROR: Set WORKSPACE environment variable!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : WORKSPACE, use the default one ${NC}"
   export WORKSPACE=${PROJECT_DEV}
 fi
 
@@ -142,7 +151,7 @@ fi
 ##  if [ -z "$CLASSPATH" ]
 ##  then
 ##fix javadoc plugins error
-    echo 'Cleaning $CLASSPATH: '${CLASSPATH}
+#    echo 'Cleaning $CLASSPATH: '${CLASSPATH}
     export CLASSPATH=""
 ##  fi
 ##
@@ -216,32 +225,32 @@ then
   export CORBA_ROOT=${PROJECT_THIRDPARTY_PATH}/tao
   export ACE_ROOT=${CORBA_ROOT}/ACE_wrappers
 
-  echo ${ACE_ROOT}
+  echo -e "${cyan} ACE_ROOT : ${ACE_ROOT} ${NC}"
 
   TAO_ROOT=${ACE_ROOT}/tao
   export TAO_ROOT
 
-  echo ${TAO_ROOT}
+  echo -e "${cyan} TAO_ROOT : ${TAO_ROOT} ${NC}"
 
   MPC_ROOT=${ACE_ROOT}/MPC
   export MPC_ROOT
 
-  echo ${MPC_ROOT}
+  echo -e "${cyan} MPC_ROOT : ${MPC_ROOT} ${NC}"
 
   CIAO_ROOT=${TAO_ROOT}/CIAO
   export CIAO_ROOT
 
-  echo ${CIAO_ROOT}
+  echo -e "${cyan} CIAO_ROOT : ${CIAO_ROOT} ${NC}"
 
   DANCE_ROOT=${CIAO_ROOT}/DANCE
   export DANCE_ROOT
 
-  echo ${DANCE_ROOT}
+  echo -e "${cyan} DANCE_ROOT : ${DANCE_ROOT} ${NC}"
 
   DDS_ROOT=${CIO_ROOT}/connectors/dds4ccm
   export DDS_ROOT
 
-  echo ${DDS_ROOT}
+  echo -e "${cyan} DDS_ROOT : ${DDS_ROOT} ${NC}"
 fi
 
 export BOOST_VERSION=1.41.0
@@ -265,16 +274,25 @@ export BOOST=$BOOST_ROOT
 export CMAKE_HOME=/usr/share/cmake-2.6.4
 export CMAKE_ROOT=${CMAKE_HOME}
 
+# PYTHON 3.6
+#See run-python.sh script
+#export PYTHON_MAJOR_VERSION=3.6
+
 if [ -f ${HOME}/run-python.sh ]; then
-    echo ${HOME}/run-python.sh
+    echo -e "${green} ${HOME}/run-python.sh ${NC}"
     source ${HOME}/run-python.sh
 fi
 
-# PYTHON 27
-#export PYTHON_DIR=/usr/lib/python
+#export PYTHON_DIR=${DRIVE_PATH}/usr/lib/python3.6
+#export VIRTUALENV_PATH=/opt/ansible/env$(echo $PYTHON_MAJOR_VERSION | sed -r 's/\.//g')
+#echo "sudo virtualenv ${VIRTUALENV_PATH} -p /usr/bin/python3.6"
+#export PATH="${VIRTUALENV_PATH}/bin:${PATH}"
+##export PYTHONPATH=$PYTHONPATH:${DRIVE_PATH}/usr/lib/python3.6/dist-packages/
+#export PYTHONPATH="${VIRTUALENV_PATH}/lib/python${PYTHON_MAJOR_VERSION}/site-packages/"
+#source ${VIRTUALENV_PATH}/bin/activate
 
 # ALIAS to python
-#alias python='/usr/bin/python'
+#alias python='/usr/bin/python3.6'
 
 # SCONS 2.2.0
 #export SCONS_DIR=${PYTHON_DIR}/Lib/site-packages/scons-2.2.0
@@ -283,11 +301,12 @@ export SCONS_DIR=/usr/lib/scons/SCons
 # ALIAS to scons-local
 export SCONS='/usr/bin/python2.7 /opt/ansible/env/bin/scons' # for virtualenv
 alias scons="${SCONS}"
+#alias scons='/usr/bin/python2.7 /opt/ansible/env/bin/scons'
 
 export SCONS_PATH=/usr/lib/scons/SCons/Script
 if [ "$SCONS_PATH" = "" ]
 then
-  echo "WARNING: Set SCONS_PATH environment variable not defined!"
+  echo -e "${red} ${double_arrow} Undefined parameter ${head_skull} : SCONS_PATH, use the default one ${NC}"
 else
   export PATH=${SCONS_PATH}:${PATH}
 fi
@@ -329,7 +348,140 @@ export JRE_HOME=${JAVA_HOME}/jre
 PATH=${JAVA_HOME}/bin:${JAVAFX_HOME}:${PATH}
 export PATH
 
-export JAVA_OPTS="-Xms256m -Xmx1548m"
+export JAVA_OPTS="-Xms1G -Xmx2G"
+
+if [ -z "$JAVA_OPTS" ]
+then
+
+  echo -e "${cyan} Enable JAVA_OPTS : ${JAVA_OPTS} ${NC}"
+
+  #JAVA_OPTS="${JAVA_OPTS} -Xms256m -Xmx1548m"
+  #JAVA_OPTS="${JAVA_OPTS} -XX:PermSize=430m -XX:MaxPermSize=430m -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000"
+  JAVA_OPTS="${JAVA_OPTS} -Djava.awt.headless=true "
+  #For Jenkins
+  JAVA_OPTS="${JAVA_OPTS} -Dakka.test.timefactor=2"
+  #Turn off jvmstat instrumentation https://stackoverflow.com/questions/76327/how-can-i-prevent-java-from-creating-hsperfdata-files
+  #JAVA_OPTS="${JAVA_OPTS} -XX:-UsePerfData"
+  #Fix GZip issue
+  #JAVA_OPTS="-Dsun.zip.disableMemoryMapping=true"
+  #Use better entropie unlimited random
+  #JAVA_OPTS="${JAVA_OPTS} -Djava.security.egd=file:/dev/urandom"
+  #JAVA_OPTS="${JAVA_OPTS} -Djava.io.tmpdir=${WORKSPACE}/target/tmp" # tmp get full
+
+  echo -e "${cyan} DEFAULT JAVA_OPTS=${JAVA_OPTS} ${NC}"
+fi
+
+if [ 1 -eq 1 ] ; then
+  export ECLIPSE_DEBUG_PORT="2924"
+  if [ -n "$ECLIPSE_DEBUG_PORT" ]
+  then
+    echo -e "${cyan} Enable ECLIPSE_DEBUG_PORT : ${ECLIPSE_DEBUG_PORT} ${NC}"
+
+    JAVA_OPTS="${JAVA_OPTS} -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=2924,server=y,suspend=n"
+
+    echo -e "${cyan} DEBUG JAVA_OPTS=${JAVA_OPTS} ${NC}"
+  fi
+
+  #export JMX_DEFAULT_DEBUG_PORT="9193"
+  if [ -n "$JMX_DEFAULT_DEBUG_PORT" ]
+  then
+    #On your remote server (the one you want to get statistics
+    #Following line is needed for tomcat to be remotely seen by jvisualvm
+    #jstatd -J-Djava.security.policy=all.policy -p 2020
+    #Add credentials
+    #gedit ~/.java.policy
+    #grant codebase "file:${java.home}/../lib/tools.jar" {
+    #  permission java.security.AllPermission;
+    #};
+    #Disable firewall if any or do a ssh tunneling
+    #ssh -D 9696 albandri@albandri -v
+
+    #these lines activate jmx for visualvm to see threads ; chosen  port is to be entered in ‘add jmx connection’ params
+    # for instance : albandri:9193 if $JMX_PORT=9193
+
+    echo -e "${cyan} Enable JMX_DEFAULT_DEBUG_PORT : ${JMX_DEFAULT_DEBUG_PORT} ${NC}"
+
+    JAVA_OPTS="${JAVA_OPTS} -Dcom.sun.management.jmxremote"
+    #JAVA_OPTS="${JAVA_OPTS} -Djava.rmi.server.hostname=albandri"
+    JAVA_OPTS="${JAVA_OPTS} -Dcom.sun.management.jmxremote.port=${JMX_DEFAULT_DEBUG_PORT}"
+    JAVA_OPTS="${JAVA_OPTS} -Dcom.sun.management.jmxremote.ssl=false"
+    JAVA_OPTS="${JAVA_OPTS} -Dcom.sun.management.jmxremote.authenticate=false"
+
+    echo -e "${cyan} JMX JAVA_OPTS=${JAVA_OPTS} ${NC}"
+
+    #JSTATD POLICY for JMX
+    POLICY=${HOME}/.jstatd.all.policy
+    [ -r ${POLICY} ] || cat >${POLICY} <<'POLICY'
+grant codebase "file:${java.home}/../lib/tools.jar" {
+permission java.security.AllPermission;
+};
+POLICY
+
+    echo -e "${cyan} jstatd -J-Djava.security.policy=${POLICY} ${NC}"
+
+  fi
+
+  #YOURKIT_HOME
+  export YOURKIT_HOME=""
+
+  if [ -n "$YOURKIT_HOME" ]
+  then
+    echo -e "${cyan} Enable YOURKIT_HOME : ${YOURKIT_HOME} ${NC}"
+
+    #rm -Rf yjp-*
+    #wget https://www.yourkit.com/download/yjp-2015-build-15082.zip
+    #unzip yjp-2015-build-15082.zip
+    #rm -f yjp-2015-build-15082.zip
+
+    YOURKIT_AGENT_ARCH="${ARCH}-x86-64"
+    YOURKIT_AGENT="${YOURKIT_HOME}/bin/${YOURKIT_AGENT_ARCH}/libyjpagent.so"
+    JAVA_OPTS="-agentpath:${YOURKIT_AGENT}=disablestacktelemetry,disableexceptiontelemetry,delay=10000,sessionname=Tomcat ${JAVA_OPTS}"
+
+    echo -e "${cyan} DEBUG YOURKIT JAVA_OPTS=${JAVA_OPTS} ${NC}"
+  fi
+
+  #JREBEL
+  export JREBEL_HOME=""
+
+  if [ -n "$JREBEL_HOME" ]
+  then
+    echo -e "${cyan} Enable JREBEL_HOME : ${JREBEL_HOME} ${NC}"
+
+    #rm -Rf jrebel*
+    #wget http://dl.zeroturnaround.com/jrebel-stable-nosetup.zip
+    #unzip jrebel-stable-nosetup.zip
+    JAVAAGENT_JREBEL_OPTS="\"${JREBEL_HOME}/jrebel.jar\""
+    JAVA_OPTS="${JAVA_OPTS} -javaagent:\"${JAVAAGENT_JREBEL_OPTS}\" -Drebel.remoting_plugin=true"
+
+    echo -e "${cyan} DEBUG JAVAAGENT_JREBEL_OPTS=${JAVAAGENT_JREBEL_OPTS} ${NC}"
+  fi
+
+  if [ -n "$JACOCO_AGENT_HOME" ]
+  then
+    echo -e "${cyan} Enable JACOCO_AGENT_HOME : ${JACOCO_AGENT_HOME} ${NC}"
+
+    #rm -Rf org.jacoco*
+    #wget http://central.maven.org/maven2/org/jacoco/org.jacoco.agent/${JACOCO_AGENT_VERSION}/org.jacoco.agent-${JACOCO_AGENT_VERSION}.jar
+
+    if [ -z "$JACOCO_AGENT_VERSION" ]
+    then
+      JACOCO_AGENT_VERSION="0.7.4.201502262128"
+    fi
+    JACOCO_AGENT_REPORT_FILE="destfile=\"${SRV_LOG_DIR}jacoco.exec\""
+    #Can also be output=tcpserver
+
+    JAVAAGENT_JACOCO_OPTS="\"${JACOCO_AGENT_HOME}/org.jacoco.agent-${JACOCO_AGENT_VERSION}-runtime.jar\"=${JACOCO_AGENT_REPORT_FILE}"
+    JAVA_OPTS="${JAVA_OPTS} -javaagent:${JAVAAGENT_JACOCO_OPTS}"
+
+    echo -e "${cyan} DEBUG JAVAAGENT_JACOCO_OPTS=${JAVAAGENT_JACOCO_OPTS} ${NC}"
+  fi
+
+  # ---- DripStat arguments
+  #DS_JAR=/usr/share/tomcat7/dripstat/dripstat.jar;
+  #export DS_JAR
+  #JAVA_OPTS="$JAVA_OPTS -javaagent:$DS_JAR";
+  #export JAVA_OPTS
+fi
 
 if [ -z "$JAVA_OPTS" ]
 then
@@ -466,17 +618,22 @@ fi
 
 # MAVEN
 #export M2_HOME=/usr/local/apache-maven-3.2.1
-export M2_HOME=/opt/maven/apache-maven-3.6.3
+export M2_HOME=/opt/maven/apache-maven-3.3.9
+#export M2_HOME=/opt/maven/apache-maven-3.6.3
+
 export M2=${M2_HOME}/bin
 export PATH=${M2}:$PATH
 #export MAVEN_OPTS="-Xms512m -Xmx1024m"
 #export MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=1024M"
 #export MAVEN_OPTS="-Xms256m -Xmx512m -XX:PermSize=64M -XX:MaxPermSize=160M"
+#setenv MAVEN_OPTS "-Djava.net.preferIPv4Stack=true"
+#setenv MAVEN_OPTS "org.pitest:pitest-maven:mutationCoverage -Dtomcat.port=$TOMCAT_PORT -Djetty.port=$JETTY_PORT -Dcargo.rmi.port=$CARGO_RMI_PORT -Dcargo.http.port=$CARGO_HTTP_PORT -Dcargo.ssh.port=$CARGO_SSH_PORT -Dcargo.debug.port=$CARGO_DEBUG_PORT -Dcargo.telnet.port=$CARGO_TELNET_PORT"
+#setenv MAVEN_OPTS "-Djacoco.outputDir=${WORKSPACE}/target -Dsonar.branch=${SONAR_BRANCH} -Dsonar.scm.enabled=false -Dsonar.scm-stats.enabled=false -Dissueassignplugin.enabled=false -Dsonar.pitest.mode=skip -Dsonar.scm.user.secured=false"
 #Jenkins We have 48GB RAM and 44 GB swap and its 24 core server.
 #-Xms24g -Xmx24g -Xmn6g -XX:MaxPermSize=512M -XX:+UseParallelOldGC -XX:ParallelGCThreads=16
 #Add MaxPermSize for andromda
 #for java 8 PermSize and MaxPermSize can be removed
-MAVEN_OPTS="-Xms256m -Xmx2g"
+MAVEN_OPTS="-Xms1G -Xmx2G -Dmaven.color.hide.level=false"
 #https://developer.atlassian.com/docs/advanced-topics/working-with-maven/colour-coding-your-maven-output
 export MAVEN_COLOR=true
 
@@ -496,8 +653,12 @@ if [ 1 -eq 1 ] ; then
   MAVEN_OPTS="${MAVEN_OPTS}"
 fi
 export MAVEN_OPTS
-export M2_REPO=${DRIVE_PATH}/repo
-echo "Maven repo are in : ${M2_REPO}"
+
+export M2_REPO=${env.WORKSPACE}/.m2/repository
+mkdir -p ${M2_REPO} || true
+mkdir ${HOME}/.m2 || true
+ln -s ${M2_REPO} ${HOME}/.m2/repository/ || true
+echo -e "${cyan} Maven repo is in : ${M2_REPO} ${NC}"
 
 # ANT
 export ANT_HOME=/usr/share/ant
@@ -566,7 +727,13 @@ export CHROME_BIN=${DRIVE_PATH}/usr/bin/google-chrome
 export LUMBERMILL_HOME="${DRIVE_PATH}/lumbermill-2.0-b3"
 export PATH=${LUMBERMILL_HOME}/bin:${PATH}
 alias lumbermill='java -jar ${LUMBERMILL_HOME}/dist/lib/lumbermill.jar'
-echo "Lumbermill port is 4445"
+#echo -e "${cyan} Lumbermill port is 4445 ${NC}"
+
+#AWS EC2
+#export EC2_KEYPAIR=<your keypair name> # name only, not the file name
+#export EC2_URL=https://ec2.<your ec2 region>.amazonaws.com
+#export EC2_PRIVATE_KEY=$HOME/<where your private key is>/pk-XXXXXXXXXXXXXXXXXXXXXXXXXXXX.pem
+#export EC2_CERT=$HOME/<where your certificate is>/cert-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX.pem
 
 #AWS EC2
 #export EC2_KEYPAIR=<your keypair name> # name only, not the file name
@@ -579,9 +746,13 @@ export EC2_URL=https://ec2.us-west-2.amazonaws.com
 export EC2_PRIVATE_KEY=$HOME/.ec2/pk-FMQ27HNLF2PVMPVL7MPWHEY5GWDKDOT2.pem
 export EC2_CERT=$HOME/.ec2/cert-FMQ27HNLF2PVMPVL7MPWHEY5GWDKDOT2.pem
 
+export DOCKER_REGISTRY_USER=nabla
+#export DOCKER_REGISTRY_PASS=todo
+
 export GITHUB_OAUTH_CLIENT_ID=c52c293400ba80af105a
 export GITHUB_OAUTH_CLIENT_SECRET=todo
 
+export GITHUB_ORGANIZATION=Banbou
 export GITHUB_TOKEN=todo
 
 export WPT_API_KEY="A.01ea5a02081b6d10415d7b0e7c844e73"
@@ -639,7 +810,7 @@ unset KUBECONFIG
 # Make a directory with link to several libraries for LIBPATH length restriction
 #################################################################################
 LIB_LINK_DIR="${PROJECT_TARGET_PATH}/lib/${ARCH}"
-echo $LIB_LINK_DIR
+echo -e "${cyan} LIB_LINK_DIR : ${LIB_LINK_DIR} ${NC}"
 test ! -d ${LIB_LINK_DIR} && mkdir -p ${LIB_LINK_DIR}
 #\rm -f ${LIB_LINK_DIR}/* |& cat >/dev/null
 #rm -f ${LIB_LINK_DIR}/*
@@ -691,6 +862,12 @@ export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/lib:/usr/lib
 # Development library path, opt first, then debug
 export LD_LIBRARY_PATH=${PROJECT_TARGET_PATH}/lib/${ARCH}/debug:${PROJECT_TARGET_PATH}/lib/${ARCH}/debug/shared:${LD_LIBRARY_PATH}
 export LD_LIBRARY_PATH=${PROJECT_TARGET_PATH}/lib/${ARCH}/opt:${PROJECT_TARGET_PATH}/lib/${ARCH}/opt/shared:${LD_LIBRARY_PATH}
+
+export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
+
+#AddressSanitizer to sanitize your code!
+export ASAN_SYMBOLIZER_PATH=/usr/bin/llvm-symbolizer-3.8
+export ASAN_OPTIONS=alloc_dealloc_mismatch=0,symbolize=1
 
 ##
 # Alias
@@ -754,8 +931,8 @@ alias ls='/bin/ls -F --color=auto'
 alias lt='l -t'
 alias lrt='l -rt'
 alias l~='l ~'
-alias ll='l -a'
-alias la='l -al'
+alias ll='l -ah'
+alias la='l -ahl'
 alias llt='ll -t'
 alias llrt='ll -rt'
 alias ll~='ll ~'
@@ -773,7 +950,7 @@ alias setWorkspace="source ${WORKSPACE_ENV}/scripts/setWorkspace.sh"
 
 #export M2_SETTINGS=${PROJECT_DEV}/.m2/settings.xml
 #alias mvn="mvn -s ${M2_SETTINGS}"
-#echo "Maven settings are in : ${M2_SETTINGS}"
+#echo "Maven settings is in : ${M2_SETTINGS}"
 
 # PATH Setting
 #source ${WORKSPACE_ENV}/java/dev.env.sh
@@ -781,6 +958,9 @@ alias setWorkspace="source ${WORKSPACE_ENV}/scripts/setWorkspace.sh"
 #GIT
 #git config --global http.sslVerify false
 export GIT_SSL_NO_VERIFY=true
+
+#for yarn
+export NODE_TLS_REJECT_UNAUTHORIZED=0
 
 #see source ~/.git-prompt.sh in .bashrc
 #source ${WORKSPACE_ENV}/home/.git-completion.bash
@@ -805,9 +985,9 @@ then
   if [ -d "${NEW_PATH}" ]
   then
         cd ${NEW_PATH}
-        echo Current path UPDATED : cd `pwd`
-  else
-        echo "Current path : `pwd`"
+        echo -e "${cyan} Current path UPDATED cd `pwd` ${NC}"
+#  else
+#        echo -e "${cyan} Current path : `pwd` ${NC}"
   fi
 fi
 
@@ -818,8 +998,10 @@ case ${ARCH} in
     ;;
 esac
 
+#If you put below it will hard code DISPLAY and you will not be able to connect
 #export DISPLAY=:0.0
 #export DISPLAY=localhost:10.0
+
 #instead us ansible local role
 #export LC_CTYPE=en_US.UTF-8
 export LANG=en_US.UTF-8
@@ -832,14 +1014,14 @@ then
   command -v rl || {
       echo -e "rl | randomize-lines not found in system PATH, please make sure that randomize-lines is installed"
       echo -e "rl | apt-get install randomize-lines fortunes fortunes-fr"
-      exit 1
+      #exit 1
   }
   if [ -f /usr/bin/rl ]
   then
     /usr/games/cowsay -f `ls /usr/share/cowsay/cows/ | rl | tail -n 1 | cut -d'.' -f1` "`/usr/games/fortune -s`"
   fi
 else
-  echo "Cowsay is not installed"
+  echo -e "${red} ${double_arrow} Cowsay is not installed ${head_skull} ${NC}"
 fi
 
 #export CONKY_HOME="${PROJECT_HOME}/albandri30/.conky"
@@ -866,6 +1048,8 @@ command -v docker-compose || {
 #	exit 1
 }
 
+#source "${WORKING_DIR}/pass.env.sh"
+source "${PROJECT_DEV}/nabla/env/home/pass.env.sh"
 echo -e "${cyan} PATH is ${PATH} ${NC}"
 
 #exit 0
